--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Gettin' Sassy</title>
     <!-- Third Party Styles -->
     <link rel="stylesheet" href="./lib/bower_components/bootstrap/dist/css/bootstrap.css">
-    <!-- Personal Styles -->
+    <link rel="stylesheet" href="./styles/main.css">
 
   </head>
   <body>
