--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <button class="btn btn-lg btn-primary col-xs-6" id="registerButton">Register</button>
     </div>
     <div class="col-xs-8 col-xs-offset-2 hide main-container">
+      <div id="logout-container"></div>
       <div class="col-xs-12 new-container hide">
         <div class="row form-spacing">
           <div class="col-xs-12 text-center">
@@ -63,7 +64,6 @@
     </div>
   </div>
 </div>
-
 <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
 <script type="text/javascript" src="./lib/bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="./lib/bower_components/bootstrap/dist/js/bootstrap.js"></script>
